--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    
+
     <img id="imagen-pag" src="" alt="">
     <br>
 
@@ -17,7 +17,7 @@
     <input id="nombre-ingresado" type="text">
     <br>
     <label for="edad-ingresada">Edad:</label>
-    <input id="edad-ingresada" type="text">
+    <input id="edad-ingresada" type="number">
     <br>
     <label for="email">Email:</label>
     <input id="email-ingresado" type="text">
